k8s/infrastructure/controllers/prometheus-operator-crds.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
