k8s/infrastructure/controllers/reloader.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: reloader
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
