k8s/infrastructure/controllers/kube-prometheus-stack.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: homelab
      namespace: gateway-system
      sectionName: https
  hostnames:
    - grafana.k8s.murtadha.dev
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
